# Endura

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  compile.sh  run.sh
Assets/: AssetManager.cpp  AssetManager.h  CMakeLists.txt
Assets/Shaders/: shader.slang
CMake/Modules/: CompileShaders.cmake  FindVulkan.cmake  SetupVulkan.cmake
Client/: CMakeLists.txt  main.cpp
Dependencies/: CMakeLists.txt
Engine/: CMakeLists.txt
Engine/Core/: Application.cpp  Application.h  CMakeLists.txt  Window.cpp  Window.h
Engine/Input/: CMakeLists.txt  InputManager.cpp  InputManager.h
Engine/Renderer/: CMakeLists.txt  Shader.cpp  Shader.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanContext.cpp  VulkanContext.h  VulkanDevice.cpp  VulkanDevice.h  VulkanInstance.cpp  VulkanInstance.h  VulkanSwapchain.cpp  VulkanSwapchain.h
Engine/UI/: CMakeLists.txt  ImGuiLayer.cpp  ImGuiLayer.h  UiManager.cpp  UiManager.h
